fixed bug with trash bar located off-screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,8 +32,6 @@ h6 {
   color: #f1f1f1;
   font-size: 2.3rem;
   font-family: "Staatliches", sans-serif;
-  transform: translateY(150px);
-  transition: all .5s ease-in-out;
   background-color: rgba(234,0,39,0.7);
 }
 
@@ -60,9 +58,4 @@ h6 {
   transition: all .5s ease-out;
   background-size: 1px 100px;
   background-position: 0 -10px; 
-}
-
-.btn-add:hover, .btn-save:hover, .btn-close:hover, .btn-delete:hover {
-  background-position: 1px -50px;
-  transform: translateY(-150px);
 }
